--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ main {
     max-width: 90vw;
     margin: 0 auto;
     /* ← CENTRA el body */
+    padding-top: 50px;
 }
 
 header {
@@ -617,7 +618,7 @@ footer p {
 .divStyle1 {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 10px;
 }
 
 .divStyle2 {
@@ -685,7 +686,7 @@ justify-content: center;
 .divContainer {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-bottom: 30px;
     gap: 30px;
 }
@@ -698,4 +699,25 @@ justify-content: center;
 .content1 .button2:hover {
     background-color: var(--text_color_2);
 
+}
+
+.commissions_hero_images {
+  display: flex;
+  justify-content: center;   /* centra horizontal */
+  margin: 0 auto;            /* refuerzo de centrado */
+  width: 100%;
+}
+
+.commissions_hero_images img {
+  width: 90vw;               /* 90% del ancho de la pantalla */
+  max-width: 1200px;         /* opcional: para que no se vea gigante en pantallas grandes */
+  height: auto;
+  border-radius: 15px;
+  object-fit: cover;
+}
+
+@media (max-width: 769px) {
+    .commissions_hero_images {
+  margin-top:30px;
+}
 }
